<?xml version="1.0" encoding="UTF-8"?>
<project>

	<modelVersion>4.0.0</modelVersion>
	
	<groupId>au.com.kahaara.wf</groupId>
	<artifactId>orchestration</artifactId>
	<packaging>jar</packaging>
	<version>1.0.0</version>
	<name>Shared - Orchestration package</name>
	<description>Orchestration as separate jar, so it can be used in other components
	</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<main.basedir>${project.basedir}</main.basedir>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<jackson.version>2.9.9</jackson.version>
		<surefire-plugin.version>2.22.2</surefire-plugin.version>
		<springboot.version>2.7.15</springboot.version>
		<junit.version>5.7.2</junit.version>

		<main.basedir>${project.basedir}/..</main.basedir>
		<final.name>orchestration-${project.version}</final.name>
		
	</properties>

	<dependencies>
	
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>${springboot.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
			<version>${springboot.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${springboot.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- swagger -->
		<!--<dependency>
		    <groupId>javax.validation</groupId>
		    <artifactId>validation-api</artifactId>
		</dependency>-->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.15.2</version>
		</dependency>

		<!-- Unit tests -->
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>

			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>${surefire-plugin.version}</version>
<!--				<configuration>-->
<!--					<forkCount>3</forkCount>-->
<!--					<reuseForks>true</reuseForks>-->
<!--					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
<!--				</configuration>-->
			</plugin>

		</plugins>
	</build>

</project>
